	* Fixed bug #14901: Forgotten styling: User Name at the top misses a CSS definition (Thanks to Christopher Stelmaszyk)

2010-11-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16245: htmlArea RTE: When inserting link with IE8, trailing line break is also linked
	* Updated htmlArea RTE version to 2.1.3

2010-11-07  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16246: Create class constants for pages.doktype
	* Fixed bug #16252: Apply "bookmarks" naming to UserTS options
	* Follow-up to #16136: Added unit-tests for t3lib_basicFileFunctions (Thanks to Andreas Kiessling)

2010-11-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16293: htmlArea RTE: Add quick tips to insert emoticon dialogue

2010-11-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16281: htmlArea RTE: Add context sensitive help to remove format dialogue (BE only)
	* Follow-up to feature #7872: htmlArea RTE: Allow CSS-styles for tables without having to enable blockstyle

2010-11-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16187: Optimize stdWrap usage for TypoScript content element CASE (Thanks to Jo Hasenau)
	* Fixed bug #16261: Clearing input field using clear icon doesn't get saved. (Thanks to Peter Beernink)
	* Fixed bug #16250: prototype methods are used to determine the available viewport dimensions in ExtJS plugins
	* Fixed bug #16254: Dead logo function in backend.php
	* Fixed bug #16116: Configuration module is hard to find the array key because it's not sorted
	* Fixed bug #15587: Bug: htmlspecialchars called twice (Thanks to Mickel Ricky)
	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)

2010-11-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #7872: htmlArea RTE: Allow CSS-styles for tables without having to activate blockstyle

2010-11-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16258: Add Khmer language to TYPO3 core (Thanks to Keo Visay)