@@ -7,6 +7,7 @@
 
 	* Fixed bug #16245: htmlArea RTE: When inserting link with IE8, trailing line break is also linked
 	* Updated htmlArea RTE version to 2.1.3
+	* Fixed bug #16313: htmlArea RTE: WebKit does not support copy and cut commands anymore
 
 2010-11-07  Steffen Gebert  <steffen@steffen-gebert.de>
 
